--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "setup-admin": "node scripts/setup-admin.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
     "firebase-admin": "^12.0.0",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
     "mongodb": "^6.3.0",
