--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
-    "firebase-admin": "^12.0.0",
+    "firebase": "^10.12.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
